# expenses

./: .gitignore
expenses-app/app/: globals.css  layout.tsx
expenses-app/app/analytics/: analytics-view.tsx  page.tsx
expenses-app/app/api/auth/login/: route.ts
expenses-app/app/api/auth/logout/: route.ts
expenses-app/app/api/auth/me/: route.ts
expenses-app/app/api/expenses/: route.ts
expenses-app/app/api/expenses/[id]/: route.ts
expenses-app/app/auth/callback/: route.ts
expenses-app/app/expenses/: expenses-view.tsx  page.tsx
expenses-app/components/: add-expense-dialog.tsx  app-shell.tsx  auth-provider.tsx  sidebar.tsx
expenses-app/lib/: analytics.ts  category-budgets.ts  expenses.ts  money.ts  types.ts
expenses-app/public/: manifest.json
expenses-server/: Cargo.toml  docker-compose.yml
expenses-server/src/: auth.rs  error.rs  main.rs  model.rs  response.rs  schema.rs
expenses-server/src/db/: client.rs  expenses.rs  mod.rs  note.rs  routine.rs  task.rs
expenses-server/src/factories/: task.rs
expenses-server/src/handlers/: expenses.rs  healthcheck.rs  mod.rs  note.rs  routine.rs  session.rs  task.rs
expenses-server/src/routes/: expenses.rs  healthcheck.rs  mod.rs  note.rs  routine.rs  session.rs  task.rs
expenses-server/src/utils/: converter.rs  mod.rs  schedule.rs
