[package]
name = "rust-axum-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8"
dotenv = "0.15.0"
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
] }
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
